<resources>
    <string name="facebook_application_id" translatable="false">2164791903609259</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2164791903609259</string>
    <string name="app_name">SafeAuto</string>
    <string name="title_settings">Settings</string>

    <!--Notification service -->
    <string name="normal_channel_id" translatable="false">channel.id.notification.normal</string>
    <string name="normal_channel_name" translatable="false">Alerta normal</string>
    <string name="low_channel_id" translatable="false">channel.id.notification.low</string>
    <string name="low_channel_name" translatable="false">Alerta Baja</string>

    <!--Botton Navigation Drawer -->
    <string name="title_home">Home</string>
    <string name="title_location">Gps</string>
    <string name="title_camera">Camera</string>
    <string name="title_calls">Calls</string>
    <string name="title_gallery">Gallery</string>


    <!-- LoginActivity -->
    <string name="profile_public_info">Public data</string>
    <string name="profile_update">Update</string>
    <string name="txt_name">Name</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_lastname">Last Name</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_model_car">Car model</string>
    <string name="txt_plaque">Plaques</string>
    <string name="txt_token_arduino">Mac Arduino</string>
    <string name="txt_provider">Provider</string>
    <string name="txt_create_account">Create account</string>

    <!--Settings Fragment -->
    <string name="settings_profile">Profile</string>
    <string name="settings_Car">Car</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_functions">Functions</string>
    <string name="settings_help">Help</string>
    <string name="settings_about">About</string>
    <string name="settings_signout">Sign out</string>

    <!--HomeFragment-->
    <string name="statusOFF">Muted alarm</string>
    <string name="statusON">Alarm on</string>
    <string name="txt_alarm">Alarm</string>

    <!--AboutFragment-->
    <string name="about_version">V. 1.0.2.1</string>
    <string name="about_developers">DEVELOPERS:</string>
    <string name="about_developer1">Germán Macías</string>
    <string name="about_developer2">Leonel García</string>
    <string name="about_developer3">Angel Herrera</string>
    <string name="about_developer4">Rafael Andrade</string>
    <string name="about_copyrigth">Copyright © All Rights reserved</string>


    <!--Login FirebaseUI-->
    <string name="fui_sign_in_with_facebook">Sign in with Facebook</string>
    <string name="fui_sign_in_with_email">Sign in with e-mail</string>


    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="txt_sensor_impact">Impact</string>
    <string name="txt_sensor_weigth">weight</string>
    <string name="txt_login_account">Sign in</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="action_settings" translatable="false">Settings</string>

    <!--Notification Fragment  -->
    <string name="notifications_select">Select</string>
    <string name="topicSensorWeight">Weight Sensor</string>
    <string name="topicSensorImpact">Impact Sensor</string>
    <string name="topicSensorCamera">Camera</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="unsuscribe">UNSUBSCRIBE</string>
    <string name="topics">topics</string>

    <!--Call Fragment -->
    <string name="call_emergency">Emergency call</string>
    <string name="choose_number">Choose number</string>

    <!--Help Fragment -->
    <string name="help_alarm">I can\'t start alarm</string>
    <string name="help_close">The app stop and close</string>
    
    <!--Functions Fragment -->
    <string name="functions_alarm_off">Alarm ON/OFF</string>
    <string name="functions_contact">Contact emergency services</string>
    <string name="functions_locate">Locate your car</string>

    <!--Gallery Fragment -->
    <string name="takePhoto">Take photo</string>

    <!--Camera -->
    <string name="txt_video_stream">Live Stream</string>
    <string name="statusVideoOFF">Live Stream is off</string>
    <string name="statusVideoON">Live Stream is on</string>
    <string name="txt_reload_tab">Reload tab please</string>
    <string name="reload">Reload</string>

    <!--Toast Message -->
    <string name="toast_welcome_user">Welcome...</string>
    <string name="toast_failed_firebaseUI">Something failed, try again please</string>
    <string name="toast_new_user">Successful registration</string>
    <string name="toast_failed_permission_call">Permission DENIED</string>



</resources>
