<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_gps"
        android:icon="@drawable/ic_location"
        android:title="@string/title_location" />

    <item
    android:id="@+id/navigation_camera"
    android:icon="@drawable/ic_photo_camera_black_24dp"
    android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_calls"
        android:icon="@drawable/ic_call"
        android:title="@string/title_calls" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/ic_photo_black_24dp"
        android:title="@string/title_gallery" />

</menu>
