<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragments.AboutFragment">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_splash"
        />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="36sp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="21dp"
            android:fontFamily="monospace"
            android:text="@string/about_version"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
             />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/about_developers"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
     />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/about_developer1"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
    />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/about_developer2"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
     />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:layout_gravity="center"
        android:text="@string/about_developer3"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
     />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/about_developer4"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        />


        </LinearLayout>


    </ScrollView>

<!--

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Copyright © Todos los Derechos Reservados"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        />
-->

</RelativeLayout>