<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragments.NotificationsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llTopis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications_select"/>
        
        <Spinner
            android:id="@+id/spTopics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/Topics"
            android:minWidth="88dp">
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp">

        <Button
            android:id="@+id/btnSuscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscribe"
            style="@style/Widget.AppCompat.Button.Colored"/>
        <Button
            android:id="@+id/btnUnSuscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unsuscribe"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    </LinearLayout>
    
    <TextView
        android:id="@+id/tvTopics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topics"
        android:layout_gravity="center_horizontal"
        />

    </LinearLayout>

</FrameLayout>