<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragments.HomeFragment"
    >

    <ImageView
        android:id="@+id/logoSafeAuto"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_splash"/>

    <Switch
        android:id="@+id/statusAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="@string/txt_alarm"
        />


    <pl.pawelkleczkowski.customgauge.CustomGauge
        android:id="@+id/gaugeImpact"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        app:gaugePointStartColor="@color/md_red_500"
        app:gaugePointEndColor="@color/md_red_500"
        app:gaugePointSize="0"
        app:gaugeStartAngle="135"
        app:gaugeStrokeCap="ROUND"
        app:gaugeStrokeColor="@color/md_grey_400"
        app:gaugeStrokeWidth="10dp"
        app:gaugeStartValue="1"
        app:gaugeEndValue="270"
        app:gaugeSweepAngle="270" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gaugeImpact"
        android:layout_alignStart="@+id/gaugeImpact"
        android:layout_alignEnd="@+id/gaugeImpact"
        android:gravity="center"
        android:text="@string/txt_sensor_impact"
        />

    <pl.pawelkleczkowski.customgauge.CustomGauge
        android:id="@+id/gaugeWeigth"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        app:gaugePointStartColor="@color/md_red_500"
        app:gaugePointEndColor="@color/md_red_500"
        app:gaugePointSize="0"
        app:gaugeStartAngle="135"
        app:gaugeStrokeCap="ROUND"
        app:gaugeStrokeColor="@color/md_grey_400"
        app:gaugeStrokeWidth="10dp"
        app:gaugeStartValue="1"
        app:gaugeEndValue="270"
        app:gaugeSweepAngle="270" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gaugeWeigth"
        android:layout_alignStart="@+id/gaugeWeigth"
        android:layout_alignEnd="@+id/gaugeWeigth"
        android:gravity="center"
        android:text="@string/txt_sensor_weigth"
        />


</RelativeLayout>